# Mirror-Sync-Scheduler

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  start-sync-scheduler.sh
configs/: env.json  mirrorsTest.json  sync-scheduler-env.json
src/: httpRequest.cpp  httpRequest.h  main.cpp  mirrors.cpp  mirrors.h  queue.cpp  queue.h  readJson.cpp  readJson.h  rsync.cpp  rsync.h  schedule.cpp  schedule.h  structs.h
srcBackup/: main.cpp
